--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,483 +1,117 @@
-@import "theme.css";
-
-/* ───────────────────────────────────────────────────────────────┤ global ├───
-*/
 * {
-  min-height: 0;
-  border: none;
-  margin: 0;
-  padding: 0;
+    font-family: "JetBrainsMono Nerd Font";
+    font-weight: bold;
+    font-size: 14px;
+    min-height: 0;
 }
 
-/* ──────────────────────────────────────────────────────────┤ drop shadow ├───
-*/
 window#waybar {
-  background: @shadow;
+    background: transparent;
+    /* main window transparent background */
 }
 
-/* ───────────────────────────────────────────────────────────┤ background ├───
-*/
-window#waybar > box {
-  background: @main-bg;
-  margin: 2px;
-}
-
-/* ─────────────────────────────────────────────────────────────┤ tooltips ├───
-*/
 tooltip {
-  background: @main-bg;
-  border: 1.5px solid @main-br;
-  border-radius: 8px;
+    font-family: inherit;
+    background: #1f2335;
+    /* tooltip background */
+    border: 2px solid #c0caf5;
+    /* tooltip border size and color */
+    border-radius: 5px;
+    /* tooltip rounded corners */
 }
 
-tooltip label {
-  color: @main-fg;
-  margin: -1.5px 3px;
-}
-
-/* ──────────────────────────────────────────────────────────────┤ general ├───
-*/
-#custom-ws,
-#workspaces,
+#workspaces button,
 #window,
-#custom-temperature,
-#memory,
-#cpu,
-#idle_inhibitor,
-#clock,
-#custom-wifi,
-#bluetooth,
-#custom-update,
 #mpris,
+#privacy-item,
+#bluetooth,
+#clock,
+#tray,
+#cpu,
+#power-profiles-daemon,
+#memory,
 #pulseaudio,
-#backlight,
-#battery,
-#custom-power {
-  opacity: 1;
-  color: @module-fg;
-  padding: 0 4px;
+#gamemode,
+#custom-updates {
+    /*text-shadow: 1px 1px 2px rgb(0, 0, 0);*/
+    /* text shadow, offset-x | offset-y | blur-radius | color */
+    background: #1f2335; /*#15161e default*/
+    /* background color */
+    margin: 10px 4px 4px 4px;
+    /* empty spaces around */
+    padding: 4px 10px;
+    /* extend pill size, vertical then horizontal */
+    /*box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.185);*/
+    /* pill background shadows */
+    border-radius: 8px; /*Default 5*/
+    /* rounded corners */
+    color: #7aa2f7;
 }
 
-#custom-left1,
-#custom-left2,
-#custom-left3,
-#custom-left4,
-#custom-left5,
-#custom-left6,
-#custom-left7,
-#custom-left8 {
-  margin-bottom: 0;
-  text-shadow: -2px 0 2px rgba(0, 0, 0, 0.5);
+/* extend empty space on both side of the bar,
+ * value from ~/.config/hypr/hyprland.conf
+ * gaps_out (8px) + border size (2px) = 10px */
+
+#clock {
+    padding-right: 5px;
 }
 
-#custom-right1,
-#custom-right2,
-#custom-right3,
-#custom-right4,
-#custom-right5 {
-  margin-bottom: 0;
-  padding-right: 3px;
-  text-shadow: 2px 0 2px rgba(0, 0, 0, 0.5);
+#privacy-item {
+    background: #e64553;
+    color: #15161e;
 }
 
-/* ──────────────────────────────────────────────────────────┤ window icon ├───
-*/
-#custom-ws {
-  background: @main-bg;
-}
-
-#custom-ws:hover {
-  color: @hover-fg;
-}
-
-/* ───────────────────────────────────────────────────────────┤ workspaces ├───
-*/
-#custom-left1 {
-  color: @workspaces;
-  background: @main-bg;
-  margin-bottom: 0;
-  padding-left: 2px;
+#tray menu {
+    font-weight: bold;
 }
 
 #workspaces {
-  background: @workspaces;
+    font-weight: bold;
+   padding: 0 3px;
+    /* remove padding around workspace module */
 }
 
 #workspaces button {
-  color: @module-fg;
-  border-radius: 8px;
-  box-shadow: none;
-  margin: 2px 0;
-  padding: 0 2px;
-  transition: none;
+    padding: 0px 12px 0px 8px;
+    /* fit with pill padding, 0px for not haveing duped vertical padding, 4px to make a square (4px value from module padding: ...#clock {padding >>4px<< 10px}) */
+    margin-left: 3px;
+    border: 1px solid transparent;
+    transition-property:
+        background-color, border-left-color, border-right-color;
+    transition-duration: 0.1s;
+    font-size: 12px;
+    font-weight: bold;
+    color: #7aa2f7;
+}
+
+#workspaces button.empty {
+    padding: 0px 10px;
+        font-weight: bold;
+}
+
+#workspaces button:first-child {
+    margin-left: 0;
+        font-weight: bold;
+}
+
+#workspaces button.active {
+    /* active workspace */
+    background: #ff757f;
+    font-weight: bold;
 }
 
 #workspaces button:hover {
-  color: @hover-fg;
-  background: @hover-bg;
-  text-shadow: none;
+    background: #7aa2f7;
+        font-weight: bold;
+    /* hovered workspace color */
 }
 
-#workspaces button.active {
-  color: @active-fg;
-  background: @active-bg;
-  text-shadow: 0 0 2px rgba(0, 0, 0, 0.6);
-  box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.4);
-  margin: 2px;
-  padding: 0 6px;
+#power-profiles-daemon {
+    color: #c4cdf2;
 }
 
-#custom-right1 {
-  color: @workspaces;
-  background: @main-bg;
-  text-shadow: 3px 0 2px rgba(0, 0, 0, 0.4);
-  margin-bottom: 0;
+@keyframes blink {
+    to {
+        background-color: #e64553;
+    }
 }
-
-/* ──────────────────────────────────────────────────────────┤ temperature ├───
-*/
-#custom-paddc {
-  padding-right: 22px;
-}
-
-#custom-left2 {
-  color: @temperature;
-  background: @main-bg;
-  padding-left: 3px;
-}
-
-#custom-temperature {
-  background: @temperature;
-  padding: 0 0 0 1px;
-}
-
-/* ───────────────────────────────────────────────────────────────┤ memory ├───
-*/
-#custom-left3 {
-  color: @memory;
-  background: @temperature;
-  padding-left: 3px;
-}
-
-#memory {
-  background: @memory;
-  padding: 0 0 0 1px;
-}
-
-#memory.warning {
-  color: @warning;
-}
-
-#memory.critical {
-  color: @critical;
-}
-
-/* ──────────────────────────────────────────────────────────────────┤ cpu ├───
-*/
-#custom-left4 {
-  color: @cpu;
-  background: @memory;
-  padding-left: 3px;
-}
-
-#cpu {
-  background: @cpu;
-}
-
-#custom-leftin1 {
-  color: @cpu;
-  margin-bottom: -1px;
-}
-
-/* ──────────────────────────────────────────────────────────┤ distro icon ├───
-*/
-#custom-left5 {
-  color: @distro-bg;
-  background: @main-bg;
-  text-shadow: none;
-  margin-bottom: -2px;
-  padding-left: 3px;
-}
-
-#custom-distro {
-  color: @distro-fg;
-  background: @distro-bg;
-  margin: 0 -1px -2px 0;
-  padding: 0 0 0 3px;
-  text-shadow: 0 0 1.5px rgba(0, 0, 0, 1);
-}
-
-#custom-right2 {
-  color: @distro-bg;
-  background: @main-bg;
-  text-shadow: none;
-  margin-bottom: -2px;
-}
-
-/* ─────────────────────────────────────────────────────────────────┤ time ├───
-*/
-#custom-rightin1 {
-  color: @time;
-  margin-bottom: -1px;
-}
-
-#idle_inhibitor {
-  background: @time;
-  padding: 0 0 0 7px;
-}
-
-#idle_inhibitor:hover {
-  color: @hover-fg;
-}
-
-#clock.time {
-  background: @time;
-  margin-left: -2px;
-  padding: 0 3px 0 0;
-}
-
-#custom-right3 {
-  color: @time;
-  background: @date;
-}
-
-/* ─────────────────────────────────────────────────────────────────┤ date ├───
-*/
-#clock.date {
-  background: @date;
-}
-
-#clock.date:hover {
-  color: @hover-fg;
-}
-
-#custom-right4 {
-  color: @date;
-  background: @tray;
-}
-
-/* ────────────────────────────────────────────────────────────────┤ wi-fi ├───
-*/
-#custom-wifi {
-  background: @tray;
-  padding: 0 8px 0 5px;
-}
-
-#custom-wifi:hover {
-  color: @hover-fg;
-}
-
-/* ────────────────────────────────────────────────────────────┤ bluetooth ├───
-*/
-#bluetooth {
-  background: @tray;
-  padding-right: 5px;
-}
-
-#bluetooth:hover {
-  color: @hover-fg;
-}
-
-/* ────────────────────────────────────────────────────────┤ system update ├───
-*/
-#custom-update {
-  padding-right: 8px;
-  background: @tray;
-}
-
-#custom-update:hover {
-  color: @hover-fg;
-}
-
-#custom-right5 {
-  color: @tray;
-  background: @main-bg;
-}
-
-/* ───────────────────────────────────────────────────────────┤ media info ├───
-*/
-#mpris {
-  background: @main-bg;
-  padding: 0 8px 0;
-}
-
-#mpris:hover {
-  color: @hover-fg;
-}
-
-/* ────────────────────────────────────────────────────────┤ output device ├───
-*/
-#custom-left6 {
-  color: @pulseaudio;
-  background: @main-bg;
-  padding-left: 3px;
-}
-
-#pulseaudio {
-  background: @pulseaudio;
-}
-
-#pulseaudio:hover {
-  color: @hover-fg;
-}
-
-/* ───────────────────────────────────────────────────────────┤ brightness ├───
-*/
-#custom-left7 {
-  color: @backlight;
-  background: @pulseaudio;
-  padding-left: 2px;
-}
-
-#backlight {
-  background: @backlight;
-}
-
-/* ──────────────────────────────────────────────────────────────┤ battery ├───
-*/
-#custom-left8 {
-  color: @battery;
-  background: @backlight;
-  padding-left: 2px;
-}
-
-#battery {
-  color: @module-fg;
-  background: @battery;
-}
-
-#battery.warning {
-  color: @warning;
-}
-
-#battery.critical {
-  color: @critical;
-}
-
-#battery.charging {
-  color: @charging;
-}
-
-/* ─────────────────────────────────────────────────────────┤ power button ├───
-*/
-#custom-leftin2 {
-  color: @battery;
-  background: @main-bg;
-  margin-bottom: -1px;
-}
-
-#custom-power {
-  color: @main-bg;
-  background: @power;
-  text-shadow: 0 0 2px rgba(0, 0, 0, 0.6);
-  box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.6);
-  border-radius: 10px;
-  margin: 2px 4px 2px 0;
-  padding: 0 6px 0 9px;
-}
-
-#custom-power:hover {
-  color: @hover-fg;
-  background: @hover-bg;
-  text-shadow: none;
-  box-shadow: none;
-}
-
-/* ───────────────────────────────────────────────────────────┤ font sizes ├───
-*/
-/*
-  NOTE: Be careful when changing font sizes, as they can affect alignment.
-
-  Try adjusting whole numbers first, then refine with decimals.
-
-  If you increase or decrease a value, make the same change to all properties
-  in this section to keep the layout consistent.
-*/
-
-* {
-  font-family: "JetBrainsMono Nerd Font";
-  font-size: 10px;
-  font-weight: bold;
-}
-
-tooltip label,
-#window label,
-#mpris {
-  font-weight: normal;
-}
-
-/* ──────────────────────────────────────────────────┤ left & right arrows ├───
-*/
-#custom-left1,
-#custom-left2,
-#custom-left3,
-#custom-left4,
-#custom-left5,
-#custom-left6,
-#custom-left7,
-#custom-left8,
-#custom-right1,
-#custom-right2,
-#custom-right3,
-#custom-right4,
-#custom-right5 {
-  font-size: 14.68px;
-}
-
-/* ─────────────────────────────────────────────────┤ left & right inverse ├───
-*/
-#custom-leftin1,
-#custom-leftin2,
-#custom-rightin1 {
-  font-size: 15.5px;
-}
-
-/* ──────────────────────────────────────────────────────────┤ distro icon ├───
-*/
-#custom-distro {
-  font-size: 14.6px;
-}
-
-#custom-left5,
-#custom-right2 {
-  font-size: 15.68px;
-}
-
-/*
-  Adjust these properties as well to keep the design consistent.
-*/
-
-/* ───────────────────────────────────────────────────────────┤ workspaces ├───
-*/
-#workspaces button {
-  border-radius: 8px;
-  padding: 0 2px;
-}
-
-#workspaces button.active {
-  padding: 0 6px;
-}
-
-/* ─────────────────────────────────────────────────────────┤ power button ├───
-*/
-#custom-power {
-  border-radius: 10px;
-  padding: 0 6px 0 9px;
-}
-
-/*
-  NOTE: If your changes don’t take effect, they might be overridden by
-  `animation.css`.
-
-  To fix this, copy your updated font sizes from this file and paste them into
-  the corresponding `*_expand` keyframes.
-
-  For example, if you change the font size of the distro icon, update it in
-  `distro_expand`.
-
-  - distro icon → `distro_expand` (line 137)
-  - power button → `power_expand` (line 152)
-  - all other modules → `module_expand` (line 166)
-*/
-
-@import "animation.css";
